--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     </script>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
-
+    <%= favicon_link_tag asset_path('logo.png') %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
