--- a/app/views/user_mailer/invitation_instructions.html.erb
+++ b/app/views/user_mailer/invitation_instructions.html.erb
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to BigBlueButton!, <%= @user.name %></h1>
+    <h1>Welcome to Virtual Classrooms Management!, <%= @user.name %></h1>
     <p>
-      You are invited by <%= @user.invited_by.name %> on Greenlight.</p>
+      You are invited by <%= @user.invited_by.name %> on Virtual Classrooms Management.</p>
     <p>
       To setup your account, just follow this link: <%= link_to 'click here', @url %>.
     </p>
