--- a/app/views/shared/modals/_delete_room_modal.html.erb
+++ b/app/views/shared/modals/_delete_room_modal.html.erb
@@ -26,7 +26,7 @@
             <%= t("modal.delete_room.keep") %>
           </button>
 
-          <%= button_to room, method: :delete, id: "delete-confirm", class: "btn btn-pill btn-danger my-1 btn-del-room" do %>
+          <%= button_to url.nil? ? room : url, method: :delete, id: "delete-confirm", class: "btn btn-pill btn-danger my-1 btn-del-room" do %>
             <%= t("modal.delete_room.delete") %>
           <% end %>
 
