fix helper methods

--- a/app/views/users/partials/_room.html.erb
+++ b/app/views/users/partials/_room.html.erb
@@ -57,4 +57,4 @@
   </div>
 </div>
 
-<%= render "shared/sessions", recordings: user_room.recordings, only_public: false %>
+<%= render "users/partials/sessions", recordings: user_room.recordings, only_public: false %>
