--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,7 +15,7 @@
 
 <footer class="footer pt-3">
   <p class="text-center mb-1"><%= t("footer.powered_by", href: link_to( 'remoteteachers.com', "https://remoteteachers.com", target: "_blank")).html_safe %> |
-    <%= link_to 'Terms', 'https://remoteteachers.com/terms' %> | <%= link_to 'Privacy', 'https://remoteteachers.com/privacy' %>
+    <%= link_to 'Terms of Use', 'https://remoteteachers.com/terms' %> | <%= link_to 'Privacy Policy', 'https://remoteteachers.com/privacy' %>
 
   </p>
 </footer>
