email text changes

--- a/app/views/user_mailer/invitation_instructions.html.erb
+++ b/app/views/user_mailer/invitation_instructions.html.erb
@@ -4,12 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to Virtual Classrooms Management!, <%= @user.name %></h1>
+    <h3>Welcome to Remote Teachers, <%= @user.name %></h3>
     <p>
-      You are invited by <%= @user.invited_by.name %> on Virtual Classrooms Management.</p>
+      You are invited by <%= @user.invited_by.name %> on RemoteTeacehrs.</p>
     <p>
       To setup your account, just follow this link: <%= link_to 'click here', @url %>.
     </p>
-    <p>Thanks, have a great day!</p>
+    <p>Thanks!</p>
   </body>
 </html>
