--- a/app/views/user_mailer/verify_email.html.erb
+++ b/app/views/user_mailer/verify_email.html.erb
@@ -22,14 +22,14 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to BigBlueButton!, <%= @user.name %></h1>
+    <h3>Welcome to RemoteTeachers!, <%= @user.name %></h3>
     <p>
-      You have successfully registered your Greenlight account,
+      You have successfully registered your RemoteTeachers account,
       your username is: <%= @user.email %>.<br>
     </p>
     <p>
       To verify your account, just follow this link: <%= link_to 'verify your email', @url %>.
     </p>
-    <p>Thanks for joining and have a great day!</p>
+    <p>Thanks!</p>
   </body>
 </html>
