--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,6 +31,11 @@
               <i class="fas fa-plus"></i>&nbsp; <%= t("header.invite_user") %>
             </a>
           <% end %>
+          <% if current_user.admin? %>
+            <a class="px-5 ml-2 mt-1" href="" data-toggle="modal" data-target="#createServerModal">
+              <i class="fas fa-plus"></i>&nbsp; <%= "Create BigblueButton Server" %>
+            </a>
+          <% end %>
 					<div class="dropdown">
 						<a href="#" class="nav-link pr-0" data-toggle="dropdown">
 							<% if current_user.image.blank? %>
@@ -49,6 +54,9 @@
               <%= link_to users_path, class: "dropdown-item" do %>
                 <i class="dropdown-icon fas fa-users"></i> <%= t("header.dropdown.users") %>
               <% end if current_user.admin_or_supervisor? %>
+              <%= link_to bbb_servers_path, class: "dropdown-item" do %>
+                <i class="dropdown-icon fa fa-window-maximize"></i> <%= t("header.dropdown.bbb_servers") %>
+              <% end if current_user.admin? %>
 							<%= link_to edit_user_path(current_user), class: "dropdown-item" do %>
 								<i class="dropdown-icon fas fa-cog"></i> <%= t("header.dropdown.settings") %>
 							<% end %>
