added many bbb server

--- a/app/views/users/partials/_create_user_modal.html.erb
+++ b/app/views/users/partials/_create_user_modal.html.erb
@@ -57,7 +57,9 @@
             <% if current_user.admin? %>
               </br>
               <div class="input-icon">
-                <%= f.select :bbb_server_id, BbbServer.all.map {|server| [server.name,server.id]}, {prompt: "Select Bigbluebutton Server"}, class: 'form-control', required: true %>
+                <%= f.collection_select :bbb_server_ids, BbbServer.all, :id, :name, {}, {:multiple => true,  class: 'form-control'} %>
+                <%#= select_tag 'bbb_servers_ids[]', options_for_select(BbbServer.all.map { |s| [s.name, s.id] }, user.bbb_servers.pluck(:id)), multiple: true, size: 10  %>
+                <%#= f.select :bbb_server_ids, BbbServer.all.map {|server| [server.name,server.id]}, {prompt: "Select Bigbluebutton Server"}, class: 'form-control', multitple: true, required: true %>
                 <div class="invalid-feedback text-left"><%= "Bigbluebutton Server can't be blank" %></div>
               </div>
               </br>
