--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,6 +24,10 @@
           <span class="icon mr-3"><i class="fas fa-user"></i></span><%= t("settings.account.title") %>
         </button>
 
+        <button id="servers" class="list-group-item list-group-item-action setting-btn <%= "active" if params[:setting] == "servers"%>">
+          <span class="icon mr-3"><i class="fas fa-server"></i></span><%= "Servers" %>
+        </button>
+
         <% if @user.social_uid.nil? %>
           <button id="password" class="list-group-item list-group-item-action setting-btn <%= "active" if params[:setting] == "password"%>">
             <span class="icon mr-3"><i class="fas fa-lock"></i></span><%= t("settings.password.title") %>
@@ -56,6 +60,7 @@
 
     <div class="col-lg-9">
       <%= render "shared/settings/setting_view", setting_id: "account", setting_title: t("settings.account.subtitle") %>
+      <%= render "shared/settings/setting_view", setting_id: "servers", setting_title: "Change your server" %>
 
       <% if @user.social_uid.nil? %>
         <%= render "shared/settings/setting_view", setting_id: "password", setting_title: t("settings.password.subtitle") %>
