--- a/app/views/user_mailer/invitation_instructions.html.erb
+++ b/app/views/user_mailer/invitation_instructions.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h3>Welcome to Remote Teachers, <%= @user.name %></h3>
     <p>
-      You are invited by <%= @user.invited_by.name %> on RemoteTeacehrs.</p>
+      You are invited by <%= @user.invited_by.name %> on RemoteTeachers.</p>
     <p>
       To setup your account, just follow this link: <%= link_to 'click here', @url %>.
     </p>
