--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,6 +23,9 @@
 
 			<div class="d-flex ml-auto">
 				<% if current_user %>
+          <a class="px-5 ml-2 mt-1" href="" data-toggle="modal" data-target="#bbb_server">
+            <i class="fas fa-server"></i>&nbsp; Change Server
+          </a>
 					<a class="px-5 ml-2 mt-1" href="" data-toggle="modal" data-target="#createRoomModal">
 						<i class="fas fa-plus"></i>&nbsp; <%= t("header.create_room") %>
 					</a>
