--- a/app/views/shared/_server.html.erb
+++ b/app/views/shared/_server.html.erb
@@ -1,18 +1,3 @@
-<%
-  # BigBlueButton open source conferencing system - http://www.bigbluebutton.org/.
-  # Copyright (c) 2018 BigBlueButton Inc. and by respective authors (see below).
-  # This program is free software; you can redistribute it and/or modify it under the
-  # terms of the GNU Lesser General Public License as published by the Free Software
-  # Foundation; either version 3.0 of the License, or (at your option) any later
-  # version.
-  #
-  # BigBlueButton is distributed in the hope that it will be useful, but WITHOUT ANY
-  # WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
-  # PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
-  # You should have received a copy of the GNU Lesser General Public License along
-  # with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
-%>
-
 <div class="modal fade" id="bbb_server" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content text-center">
@@ -21,12 +6,12 @@
           <div class="card-title">
             <h3>Change your server</h3>
           </div>
-          <%= form_for current_user, url: update_user_path(current_user), method: :put do |f|  %>
+          <%= form_for current_user, url: "/users_update/#{current_user.uid}", method: :put do |f|  %>
             <div class="input-icon">
               <span class="input-icon-addon">
                 <i class="fa fa-server"></i>
               </span>
-              <%= f.select :bbb_server_id, current_user.bbb_servers.map {|server| [server.name,server.id]}, {}, { class: "form-control custom-select" }%>
+              <%= f.select :bbb_server_id, BbbServer.all.map {|server| [server.name,server.id]}, {}, { class: "form-control custom-select" }%>
             </div>
             <div class="form-footer">
               <%= f.submit "Save", class: "btn btn-outline-primary btn-block btn-pill" %>
