--- a/app/views/admin/dashboard/_user_registration_chart.html.erb
+++ b/app/views/admin/dashboard/_user_registration_chart.html.erb
@@ -1,1 +1,1 @@
-<%= column_chart  user_registered_by_month , colors: ["#009688", "#666"], label: "User Registered" %>
+<%= column_chart  user_registered_by_month , colors: ["#0088cc", "#666"], label: "User Registered" %>
