change site title

--- a/app/views/user_mailer/invitation_instructions.html.erb
+++ b/app/views/user_mailer/invitation_instructions.html.erb
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h3>Welcome to Remote Teachers, <%= @user.name %></h3>
+    <h3>Welcome to Virtual Class Management, <%= @user.name %></h3>
     <p>
-      You are invited by <%= @user.invited_by.name %> on RemoteTeachers.</p>
+      You are invited by <%= @user.invited_by.name %> on Virtual Class Management.</p>
     <p>
       To setup your account, just follow this link: <%= link_to 'click here', @url %>.
     </p>
