--- a/app/views/user_mailer/verify_email.html.erb
+++ b/app/views/user_mailer/verify_email.html.erb
@@ -22,9 +22,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h3>Welcome to RemoteTeachers!, <%= @user.name %></h3>
+    <h3>Welcome to Virtual Class Management!, <%= @user.name %></h3>
     <p>
-      You have successfully registered your RemoteTeachers account,
+      You have successfully registered your Virtual Class Management account,
       your username is: <%= @user.email %>.<br>
     </p>
     <p>
