--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -60,7 +60,7 @@
 
     <div class="col-lg-9">
       <%= render "shared/settings/setting_view", setting_id: "account", setting_title: t("settings.account.subtitle") %>
-      <%= render "shared/settings/setting_view", setting_id: "servers", setting_title: "Change your server" %>
+      <%#= render "shared/settings/setting_view", setting_id: "servers", setting_title: "Change your server" %>
 
       <% if @user.social_uid.nil? %>
         <%= render "shared/settings/setting_view", setting_id: "password", setting_title: t("settings.password.subtitle") %>
