--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,8 +14,8 @@
 %>
 
 <footer class="footer pt-3">
-  <p class="text-center mb-1"><%= t("footer.powered_by", href: link_to( 'remoteteachers.com', "https://remoteteachers.com", target: "_blank")).html_safe %> |
-    <%= link_to 'Terms of Use', 'https://remoteteachers.com/terms' %> | <%= link_to 'Privacy Policy', 'https://remoteteachers.com/privacy' %>
+  <p class="text-center mb-1"><%= t("footer.powered_by", href: link_to( 'govirtualclass.com', "https://govirtualclass.com", target: "_blank")).html_safe %> |
+    <%= link_to 'Terms of Use', 'https://govirtualclass.com/terms' %> | <%= link_to 'Privacy Policy', 'https://govirtualclass.com/privacy' %>
 
   </p>
 </footer>
