--- a/app/views/user_mailer/invitation_instructions.html.erb
+++ b/app/views/user_mailer/invitation_instructions.html.erb
@@ -14,6 +14,9 @@
     <p>
       To setup your account, just follow this link: <%= link_to 'click here', @url %>.
     </p>
+    <p>
+      Note: if above link is not working, then copy this link and paste it into your browser: <%= @url %>.
+    </p>
     <p>Thanks!</p>
   </body>
 </html>
