--- a/app/views/user_mailer/invitation_instructions.html.erb
+++ b/app/views/user_mailer/invitation_instructions.html.erb
@@ -4,12 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h3>Welcome to the <%= @site.name %>, <%= @user.name %></h3>
+    <h3>Welcome, <%= @user.name %></h3>
     <p>
       <% if @user.invited_by.present? %>
-        You are invited by <%= @user.invited_by.name %> on <%= @site.name %>.</p>
+        You are invited by <%= @user.invited_by.name %> on <%= @site.name %> virtual class management.</p>
         <% else %>
-          You are invited on <%= @site.name %>.</p>
+          You are invited on <%= @site.name %> virtual class management.</p>
     <% end %>
     <p>
       To setup your account, just follow this link: <%= link_to 'click here', @url %>.
