--- a/app/views/user_mailer/invitation_instructions.html.erb
+++ b/app/views/user_mailer/invitation_instructions.html.erb
@@ -6,11 +6,12 @@
   <body>
     <h3>Welcome, <%= @user.name %></h3>
     <p>
-      <% if @user.invited_by.present? %>
-        You are invited by <%= @user.invited_by.name %> on <%= @site.name %> virtual class management.</p>
-        <% else %>
-          You are invited on <%= @site.name %> virtual class management.</p>
-    <% end %>
+      <%# if @user.invited_by.present? %>
+<!--        You are invited by <%#= @user.invited_by.name %> on <%#= @site.name %> virtual class management.</p>-->
+        <%# else %>
+<!--          You are invited on <%#= @site.name %> virtual class management platform.</p>-->
+    <%# end %>
+      You are invited on <%= @site.name %> virtual class management platform.</p>
     <p>
       To setup your account, just follow this link: <%= link_to 'click here', @url %>.
     </p>
