--- a/app/views/user_mailer/invitation_instructions.html.erb
+++ b/app/views/user_mailer/invitation_instructions.html.erb
@@ -11,7 +11,7 @@
         <%# else %>
 <!--          You are invited on <%#= @site.name %> virtual class management platform.</p>-->
     <%# end %>
-      You are invited on <%= @site.name %>' virtual classroom management platform.</p>
+      You are invited on <%= @site.name %>' virtual classrooms management platform.</p>
     <p>
       To setup your account, just follow this link: <%= link_to 'click here', @url %>.
     </p>
